fix vertical alignment of search options

--- a/frontend/app/components/search.module.css
+++ b/frontend/app/components/search.module.css
@@ -54,7 +54,8 @@
 }
 
 .searchContainer label {
-    padding-top: 0.9rem;
+    /* padding-top: 0.9rem; */
+    line-height: 2.7rem;
     width: 5rem;
     font-size: 0.8rem;
     transition: 0.3s;
@@ -64,8 +65,8 @@
 
 .searchContainer input[type="radio"]:checked + label {
     color: blue;
-    font-size: 1.05rem;
-    padding-top: 0.8em;
+    scale: 1.2;
+    /* padding-top: 0.8em; */
     font-weight: bold;
 }
 
